minor naming corrections

--- a/2023-01-19_K-Means_Vegetationsflächen.ipynb
+++ b/2023-01-19_K-Means_Vegetationsflächen.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Klassifikation Land/Wasser (NDWI)\n",
+    "# Klassifikation Vegetationsflächen (NDVI)\n",
     "\n",
     "#### Jugend Forscht - Projekt: \"KI-unterstützte Fernerkundung - ein Verfahren hoher Genauigkeit?\"\n",
     "##### Jasper Eggert, Januar 2023"
@@ -330,7 +330,7 @@
     "ProductIO.writeProduct(L1C_NDVI_kmeans_2_200, onedrive_SNAP_WS + r'\\Satellitendaten\\NDVI\\L1C_NDVI_KMeans_2_200', 'GeoTIFF')\n",
     "ProductIO.writeProduct(L1C_NDVI_kmeans_2_300, onedrive_SNAP_WS + r'\\Satellitendaten\\NDVI\\L1C_NDVI_KMeans_2_300', 'GeoTIFF')\n",
     "ProductIO.writeProduct(L1C_NDVI_kmeans_3_200, onedrive_SNAP_WS + r'\\Satellitendaten\\NDVI\\L1C_NDVI_KMeans_3_200', 'GeoTIFF')\n",
-    "ProductIO.(L1C_NDVI_kmeans_3_300, onedrive_SNAP_WS + r'\\Satellitendaten\\NDVI\\L1C_NDVI_KMeans_3_300', 'GeoTIFF')"
+    "ProductIO.writeProduct(L1C_NDVI_kmeans_3_300, onedrive_SNAP_WS + r'\\Satellitendaten\\NDVI\\L1C_NDVI_KMeans_3_300', 'GeoTIFF')"
    ],
    "metadata": {
     "collapsed": false
